3 files modified, 10 added

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,1 +1,21 @@
-!!HOME WORK!!
+<h1>Modifying DOM Elements.</h1>
+
+<h2 class="mt-5">Method: 1 (the bad)</h2>
+<span #el>I am manoj.</span>
+<span>I am a web developer.</span>
+
+<h2 class="mt-5">Method: 2 (the famous bad)</h2>
+<span [appHighlight]="'highlight'">I am manoj.</span>
+<span>I am a web developer.</span>
+
+<h2 class="mt-5">Method: 3 (the best)</h2>
+<span [appHighlight]="'highlight'">I am manoj.</span>
+<span>I am a web developer.</span>
+
+<h1 class="mt-5">Modifying DOM Structure:</h1>
+
+<h2 class="mt-5">Method: 1 (bad)</h2>
+<app-dom-structure-1-parent></app-dom-structure-1-parent>
+
+<h2 class="mt-5">Method: 2</h2>
+<app-dom-structure-2-parent></app-dom-structure-2-parent>
