--- a/src/app/core/home/dom-structure-2-parent/dom-structure-2-parent.component.html
+++ b/src/app/core/home/dom-structure-2-parent/dom-structure-2-parent.component.html
@@ -1,6 +1,6 @@
 <p>parent method 2 works!</p>
 <ng-container #viewcontainer></ng-container>
-<ng-template>
+<ng-template #t>
   <app-dom-structure-1-child #child></app-dom-structure-1-child>
 </ng-template>
 <button (click)="removeChild()">remove child</button>
