--- a/src/app/core/home/dom-structure-2-parent/dom-structure-2-parent.component.html
+++ b/src/app/core/home/dom-structure-2-parent/dom-structure-2-parent.component.html
@@ -3,4 +3,9 @@
 <ng-template #t>
   <app-dom-structure-1-child #child></app-dom-structure-1-child>
 </ng-template>
+
+<div *ngIf="checker()">yeah</div>
+
+<div *ngIf="checked">yo</div>
+
 <button (click)="removeChild()">remove child</button>
