--- a/src/app/projection/main/main.component.html
+++ b/src/app/projection/main/main.component.html
@@ -22,8 +22,20 @@
 </app-multiple>
 
 <h2 class="mt-5">Dynamic</h2>
-<app-dynamic [names]="['Tab 1', 'Tab 2', 'Tab 3']">
+<!-- <app-dynamic [names]="['Tab 1', 'Tab 2', 'Tab 3']">
   <ng-template appTab>Content for the 1st tab</ng-template>
   <ng-template appTab>Content for the 2nd tab</ng-template>
   <ng-template appTab>Content for the 3rd tab</ng-template>
+</app-dynamic> -->
+
+<!-- <app-dynamic>
+  <ng-template appTab name="Tab 1">Content for the 1st tab</ng-template>
+  <ng-template appTab name="Tab 2">Content for the 2nd tab</ng-template>
+  <ng-template appTab name="Tab 3">Content for the 3rd tab</ng-template>
+</app-dynamic> -->
+
+<app-dynamic>
+  <div *appTab="'Tab 1'">Content for the 1st tab</div>
+  <div *appTab="'Tab 2'">Content for the 2nd tab</div>
+  <div *appTab="'Tab 3'">Content for the 3rd tab</div>
 </app-dynamic>
