--- a/src/app/projection/dynamic/dynamic.component.html
+++ b/src/app/projection/dynamic/dynamic.component.html
@@ -6,5 +6,5 @@
 </button>
 
 <div class="border border-primary">
-  <ng-container [ngTemplateOutlet]="currentTab"></ng-container>
+  <ng-container *ngTemplateOutlet="currentTab; context: ctx"></ng-container>
 </div>
