--- a/src/app/projection/main/main.component.html
+++ b/src/app/projection/main/main.component.html
@@ -37,5 +37,7 @@
 <app-dynamic>
   <div *appTab="'Tab 1'">Content for the 1st tab</div>
   <div *appTab="'Tab 2'">Content for the 2nd tab</div>
-  <div *appTab="'Tab 3'">Content for the 3rd tab</div>
+  <div *appTab="'Tab 3'; title as title">
+    Content for the 3rd tab - {{ title }}
+  </div>
 </app-dynamic>
