--- a/src/app/projection2/list/list.component.html
+++ b/src/app/projection2/list/list.component.html
@@ -1,19 +1,18 @@
-<ng-template #itemTpl let-data>
+<ng-template #itemTpl let-option="option" let-index="index">
   <div class="card">
     <div class="card-header">Featured</div>
     <div class="card-body">
-      <h5 class="card-title">{{ data.item.titre }}</h5>
-      <p class="card-text">{{ data.item.description }}</p>
-      <button
-        class="btn btn-primary"
-        (click)="addTemplate(data.index)"
-        appAddContent
-        [template]="dynamic"
-      >
-        <!--         [vcr]="vcr" -->
+      <h5 class="card-title">
+        {{ option.item.titre }}
+      </h5>
+      <p class="card-text">
+        {{ option.item.description }}
+      </p>
+
+      <button class="btn btn-primary" (click)="deleteIt(option)">
         Go somewhere
       </button>
-      <ng-template #dynamic></ng-template>
+      <!-- <ng-template #dynamic></ng-template> -->
     </div>
   </div>
 </ng-template>
