--- a/src/app/deezer/components/search/search.component.html
+++ b/src/app/deezer/components/search/search.component.html
@@ -1,31 +1,6 @@
-<div [formGroup]="formGroup">
-<input 
-  formControlName="searchCtrl"
-  class="form-control" 
-  placeholder="Ingredient name" 
-  aria-label="Ingredient name"
-  appAutofocus
->
-
-<div class="btn-group mt-2" role="group" aria-label="Basic radio toggle button group">
-  <ng-container *ngFor="let category of categories$ | async; let i=index">
-    <input 
-      type="radio" 
-      class="btn-check" 
-      name="btnradio" 
-      [id]="'btnradio'+i"
-      [value]="category"
-      formControlName="categoryCtrl"
-      autocomplete="off"
-    />
-    <label class="btn btn-outline-primary" [for]="'btnradio'+i">{{category}}</label>  
+<app-search-bar></app-search-bar>
+<ng-container *ngIf="!(isLoading$ | async)">
+  <ng-container *ngIf="(searchResults$ |  async) as searchResults">
+    <app-search-result [searchResults]="searchResults"></app-search-result>
   </ng-container>
-</div>
-
-<div class="mt-2">
-  <button 
-    [disabled]="formGroup?.invalid"
-    (click)="submit()"
-    class="btn btn-primary mb-3"
-  >Search</button>
-</div>
+</ng-container>
