--- a/src/app/deezer/components/search-result/components/album-card/album-card.component.scss
+++ b/src/app/deezer/components/search-result/components/album-card/album-card.component.scss
@@ -1,22 +1,39 @@
-.grid-container {
-    // display: grid;
-    display: inline-grid;
+.cards-container {
+    display: grid;
+    // display: inline-grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(auto-fill, 120px);
-    // grid-row-gap: .5em;
+    grid-template-rows: repeat(auto-fill, 1fr);
+    grid-row-gap: .5em;
     grid-column-gap: 1em;
+
+    .card {
+        .card-img-container {
+            img {
+                max-width: 100%;
+                    // border-radius: .5rem;
+            }    
+        }
+        .card-title {
+            font-size: .75rem
+        }
+        .card-text {
+            font-size: .625rem
+        }
+    }
+
+    .grid-img-container {
+        overflow: hidden; 
+        min-width: 0;
+    }
+
 }
 
 .grid-row {
 }
 
 
-.card {
-    max-width: 250px;
-    flex: 1 1 0;
-}
 
-.img-container {
+.img-container {        
     background: blue;
     position: relative;
     flex: 1 1 0;
