--- a/src/app/deezer/components/search-result/components/album-card/album-card.component.html
+++ b/src/app/deezer/components/search-result/components/album-card/album-card.component.html
@@ -1,145 +1,47 @@
 <p>album-card works!</p>
-<div class="grid-container">
-
-  <div
-      appAmIVisible
-      class="grid-card me-2"
-    >
-    <div class="grid-img-container">
-      <img 
-        ngSrc="https://picsum.photos/id/237/250/250"
-        width="250"
-        height="250"
-      >
-      <!-- <img 
-        [src]="result?.cover_medium"
-        width="100%"
-      > -->
-    </div>
-    <div class="card-body w-100">
-      <h5 class="card-title">Title</h5>
-      <p class="card-text">Artiste name</p>
-    </div>
-  </div>
-  <div
-      appAmIVisible
-      class="grid-card me-2"
-    >
-    <div class="grid-img-container">
-      <img 
-        ngSrc="https://picsum.photos/id/237/250/250"
-        width="250"
-        height="250"
-      >
-      <!-- <img 
-        [src]="result?.cover_medium"
-        width="100%"
-      > -->
-    </div>
-    <div class="card-body w-100">
-      <h5 class="card-title">Title</h5>
-      <p class="card-text">Artiste name</p>
-    </div>
-  </div>
-  <div
-      appAmIVisible
-      class="grid-card me-2"
-    >
-    <div class="grid-img-container">
-      <img 
-        ngSrc="https://picsum.photos/id/237/250/250"
-        width="250"
-        height="250"
-      >
-      <!-- <img 
-        [src]="result?.cover_medium"
-        width="100%"
-      > -->
-    </div>
-    <div class="card-body w-100">
-      <h5 class="card-title">Title</h5>
-      <p class="card-text">Artiste name</p>
-    </div>
-  </div>
-  <div
-  appAmIVisible
-  class="grid-card me-2"
->
-<div class="grid-img-container">
-  <img 
-    ngSrc="https://picsum.photos/id/237/250/250"
-    width="250"
-    height="250"
-  >
-  <!-- <img 
-    [src]="result?.cover_medium"
-    width="100%"
-  > -->
-</div>
-<div class="card-body w-100">
-  <h5 class="card-title">Title</h5>
-  <p class="card-text">Artiste name</p>
-</div>
-  </div>
-  <div
-  appAmIVisible
-  class="grid-card me-2"
->
-<div class="grid-img-container">
-  <img 
-    ngSrc="https://picsum.photos/id/237/250/250"
-    width="250"
-    height="250"
-  >
-  <!-- <img 
-    [src]="result?.cover_medium"
-    width="100%"
-  > -->
-</div>
-<div class="card-body w-100">
-  <h5 class="card-title">Title</h5>
-  <p class="card-text">Artiste name</p>
-</div>
-  </div>
-
-  <!-- <div>2</div>
-  <div>3</div>
-  <div>4</div>
-  <div>5</div> -->
-  <div>6</div>
-  <div>7</div>
-  <div>8</div>
-  <div>9</div>
-  <div>10</div>
-</div>
-
-
 <!-- <div class="grid-container">
-  <div *ngFor="let resultsRow of (searchResults$ | async)?.data as results;" class="grid-row">
-      <div
-        *ngFor="let result of resultsRow; let i=index;  trackBy: trackByIndex"
-        appAmIVisible
-        [isTargetElement]="i === (result.length-3)"
-        (elementVisible)="emitElementVisible($event)"
-        class="grid-card me-2 d-flex"
+
+  <div class="grid-item">
+    <div class="grid-img-container">
+      <img 
+        [src]="'https://picsum.photos/id/237/250/250'"
       >
-        <div class="grid-img-container">
-          <img 
-            [ngSrc]="result?.cover_medium"
-            fill
-          >
-          <img 
-            [src]="result?.cover_medium"
-            width="100%"
-          >
-        </div>
-        <div class="card-body w-100">
-          <h5 class="card-title">{{result?.title}}</h5>
-          <p class="card-text">{{result?.artist?.name}}</p>
-        </div>
-      </div>
+    </div>
   </div>
-</div> -->
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>
+  <div class="grid-item">10</div>
+
+</div>
+ -->
+
+<div class="cards-container mb-5">
+  <div *ngFor="let result of (searchResults$ | async)?.data as results; let i=index; trackBy: trackByIndex" 
+    appAmIVisible
+    [isTargetElement]="i === (results.length-1)"
+    (elementVisible)="emitElementVisible($event)"
+    class="card">
+    <img 
+      [src]="result?.cover_medium"
+      class="card-img-top"
+    >
+    <div class="card-icones">
+      <i class="bi bi-play-circle"></i>
+    </div>
+      
+
+    <div class="card-body px-2 py-2">
+      <h5 class="card-title">{{result?.title}}</h5>
+      <p class="card-text">{{result?.artist?.name}}</p>
+    </div>
+  </div>
+</div>
 <!-- <div *ngFor="let resultsRow of (searchResults$ | async)?.data as results;" class="d-flex gap-5 mb-5">
   <ng-container *ngFor="let result of resultsRow; let i=index;  trackBy: trackByIndex">
     <div
